# ai-assistant

./: .editorconfig  README.md  bedrock.py  pyproject.toml  server.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: detalii.md
tools/: led_light_control.py
